[workspace]
members = [
    "benches/utils",
    "benches/cakes",
    "benches/pancakes",
    "benches/musals",
    "crates/abd-clam",
    "crates/distances",
    "crates/symagen",
    "pypi/distances",
    "tools/mbed",
    "visualizations/mbed",
]
resolver = "2"

[workspace.dependencies]
abd-clam = { version = "0.32.0", path = "crates/abd-clam" }
distances = { version = "1.8.0", path = "crates/distances" }
symagen = { version = "0.5.0", path = "crates/symagen" }

rayon = "1.8"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
bitcode = { version = "0.5" }
libm = "0.2"
ndarray = { version = "0.16", features = ["rayon", "approx"] }
ndarray-npy = "0.9"
csv = { version = "1.3.0" }
flate2 = { version = "1.0" }
# For GCD and LCM calculations.
num-integer = "0.1"
# For reading fasta files.
bio = "2.0"
# For a faster implementation of Levenshtein distance.
stringzilla = "3.10"
# For CLI tools
clap = { version = "4.5", features = ["derive"] }
# For low-latency logging from multiple threads.
ftlog = { version = "0.2" }
# For reading and writing HDF5 files.
hdf5 = { package = "hdf5-metno", version = "0.9.0" }
# For some MSA schenanigans.
bytecount = "0.6.8"
# For the mass-spring system in the dimension reduction.
generational-arena = { version = "0.2.9", features = ["serde"] }

# For Python Wrappers
numpy = "0.23"
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }
pyo3-ffi = { version = "0.23", features = ["extension-module", "abi3-py39"] }

[profile.test]
opt-level = 3
debug = true
overflow-checks = true

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = true
overflow-checks = true
