[workspace]
members = [
    "benches/utils",
    "benches/cakes",
    "benches/pancakes",
    "benches/musals",
    "crates/abd-clam",
    "crates/distances",
    "crates/symagen",
    "pypi/distances",
    "clts/mbed",
]
resolver = "2"

# TODO: Najib: Rework the `lints` section after [this issue](https://github.com/rust-lang/cargo/issues/12918) is resolved.

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = 0 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -2 }
correctness = { level = "deny", priority = -3 }
suspicious = { level = "warn", priority = -4 }
style = { level = "warn", priority = -5 }
complexity = { level = "warn", priority = -6 }
perf = { level = "warn", priority = -7 }
unwrap_used = { level = "warn", priority = -8 }
expect_used = { level = "warn", priority = -9 }
panic = { level = "warn", priority = -10 }
cast_lossless = { level = "warn", priority = -11 }
missing_docs_in_private_items = { level = "warn", priority = -12 }
unnecessary_debug_formatting = { level = "allow", priority = 1 }  # TODO Najib: Remove this after the CLI PR is merged.

[workspace.dependencies]
abd-clam = { version = "0.32.0", path = "crates/abd-clam" }
distances = { version = "1.8.0", path = "crates/distances" }
symagen = { version = "0.5.0", path = "crates/symagen" }

rayon = "1.8"
rand = { version = "0.9.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
bitcode = { version = "0.5" }
libm = "0.2.14"
ndarray = { version = "0.16", features = ["rayon", "approx"] }
ndarray-npy = "0.9"
csv = { version = "1.3.0" }
flate2 = { version = "1.0" }
# For GCD and LCM calculations.
num-integer = "0.1"
# For reading fasta files.
bio = "2.0"
# For a faster implementation of Levenshtein distance.
stringzilla = "3.10"
# For CLI tools
clap = { version = "4.5", features = ["derive"] }
# For low-latency logging from multiple threads.
ftlog = { version = "0.2" }
# For reading and writing HDF5 files.
hdf5 = { package = "hdf5-metno", version = "0.10.1" }
# For some MSA schenanigans.
bytecount = "0.6.8"
# For the mass-spring system in the dimension reduction.
# generational-arena = { version = "0.2.9", features = ["serde"] }
slotmap = { version = "1.0", features = ["serde"] }

# For Python Wrappers
numpy = "0.24.0"
pyo3 = { version = "0.24.2", features = ["extension-module", "abi3-py313"] }
pyo3-ffi = { version = "0.24.2", features = ["extension-module", "abi3-py313"] }

[profile.test]
opt-level = 3
debug = true
overflow-checks = true

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = true
overflow-checks = true
