[workspace]
members = [
    "crates/abd-clam",
    "crates/distances",
    "crates/symagen",
    "crates/shell",
    "pypi/distances",
]
resolver = "2"

# TODO: Najib: Rework the `lints` section after [this issue](https://github.com/rust-lang/cargo/issues/12918) is resolved.

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = 0 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -2 }
correctness = { level = "deny", priority = -3 }
suspicious = { level = "warn", priority = -4 }
style = { level = "warn", priority = -5 }
complexity = { level = "warn", priority = -6 }
perf = { level = "warn", priority = -7 }
unwrap_used = { level = "warn", priority = -8 }
expect_used = { level = "warn", priority = -9 }
panic = { level = "warn", priority = -10 }
cast_lossless = { level = "warn", priority = -11 }
missing_docs_in_private_items = { level = "warn", priority = -12 }
unnecessary_debug_formatting = { level = "allow", priority = 1 }  # TODO Najib: Remove this after the CLI PR is merged.

[workspace.dependencies]
abd-clam = { version = "0.32.0", path = "crates/abd-clam" }
distances = { version = "1.8.0", path = "crates/distances" }
symagen = { version = "0.5.0", path = "crates/symagen" }
shell = { version = "0.1.0", path = "crates/shell" }

num = "0.4"
rayon = "1.11"
rand = "0.9"
serde = "1.0"
bitcode = "0.5"  # not upgrading: For generic params on types, and for recursive types.
libm = "0.2.14"
ndarray = "0.16"
ndarray-npy = "0.9"
csv = "1.3.0"
flate2 = "1.1"
num-integer = "0.1"
bio = "3.0"
stringzilla = "4.0"
clap = "4.5"
ftlog = "0.2"
hdf5 = { package = "hdf5-metno", version = "0.10.1" }
bytecount = "0.6"
slotmap = "1.0"
numpy = "0.25"
pyo3 = "0.25"
float-cmp = "0.10.0"
smartcore = "0.4"
statistical = "1.0.0"
tempfile = "3.22"
test-case = "3.2.1"
criterion = "0.7.0"

[profile.test]
opt-level = 3
debug = true
overflow-checks = true

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
strip = true
lto = true
codegen-units = 1
