[project]
name = "clam"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Najib Ishaq", email = "najib_ishaq@zoho.com" },
    { name = "Tom", email = "info@tomhoward.codes" },
]
dependencies = [
    "numpy>=2.0.0",
]
readme = "README.md"
requires-python = ">= 3.9"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "pre-commit>=3.7.1",
    "bump2version>=1.0.1",
    "pytest>=8.2.2",
    "pytest-xdist>=3.6.1",
    "pytest-sugar>=1.0.0",
    "pytest-cov>=5.0.0",
    "richbench>=1.0.3",
]

[tool.rye.workspace]
members = [
    "pypi/distances",
]
