[project]
name = "clam"
version = "0.1.0"
description = "The CLAM workspace is a collection of Rust crates and Python packages."
authors = [
    { name = "Najib Ishaq", email = "najib_ishaq@zoho.com" },
    { name = "Tom Howard", email = "info@tomhoward.codes" },
]
dependencies = [
    "matplotlib>=3.10.3",
    "numba>=0.61.2",
    "numpy>=2.2",
    "pynndescent>=0.5.13",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "typer>=0.17.4",
    "umap-learn>=0.5.9.post2",
]
readme = "README.md"
requires-python = ">= 3.13"

[tool.uv]
managed = true
dev-dependencies = [
    "pre-commit>=4.2.0",
    "bump2version>=1.0.1",
    "pytest>=8.2.2",
    "pytest-xdist>=3.6.1",
    "pytest-sugar>=1.0.0",
    "pytest-cov>=6.1.1",
    "richbench>=1.0.3",
    "ruff>=0.11.8",
    "mypy>=1.15.0",
    "pip>=25.1.1",
    "types-seaborn>=0.13.2.20250111",
    "types-tqdm>=4.67.0.20250417",
    "types-editdistance>=0.8.0.20250401",
    "editdistance>=0.8.1",
]
package = false

[tool.uv.workspace]
members = [
    "pypi/distances",
    "experiments/py-mbed",
]

[tool.uv.sources]
abd-distances = { workspace = true }
py-mbed = { workspace = true }

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
disable_error_code = ["import-untyped"]
