[package]
name = "abd-clam"
version = "0.22.0"
authors = [
    "Najib Ishaq <najib_ishaq@zoho.com>",
    "Tom Howard <info@tomhoward.codes>",
    "Noah Daniels <noah_daniels@uri.edu>",
    "Morgan Prior <morgan_prior@uri.edu>",
    "Isaac Chen <ijchen@uri.edu>",
    "Oliver McLaughlin <olwmcjp@gmail.com>",
]
edition = "2021"
rust-version = "1.72"
description = "Clustered Learning of Approximate Manifolds"
license = "MIT"
readme = "README.md"

# Publishing lock.
# When you're ready to start publishing, set publish to true
# and update the release github action.
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
distances = { version = "1.4.0", path = "../distances" }
rayon = "1.8.0"

# Only used for Dataset::choose_unique
# TODO: Use a smaller crate so we can have a smaller binary
rand_chacha = "0.3.1"
rand = "0.8.5"

# Only used in CAKES
# TODO: Break CAKES out into an optional feature
priority-queue = "1.3.2"

# Only used in CHAODA
# TODO: Break CHAODA out into an optional feature
# automl = { version = "0.3.0", path = "../rust-automl" }
# Only used for normalizing cluster ratios for CHAODA
libm = "0.2.7"

# Only used for sharded datasets
# TODO: Break sharded datasets out into an optional feature
ndarray = { version = "0.15.6", features = ["rayon"] }
ndarray-npy = "0.8.1"
memmap2 = "0.8.0"
# Used for serializing `Cluster`s
serde = { version = "1.0.164", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["alloc"] }

[dev-dependencies]
symagen = { version = "0.1.3",  path = "../SyMaGen" }
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "rnn-search"
harness = false

[[bench]]
name = "knn-search"
harness = false

[[bench]]
name = "genomic"
harness = false

[[bench]]
name = "sharded-search"
harness = false

[[bench]]
name = "knn-vs-rnn"
harness = false
