[package]
name = "abd-clam"
version = "0.26.0"
authors = [
    "Najib Ishaq <najib_ishaq@zoho.com>",
    "Tom Howard <info@tomhoward.codes>",
    "Noah Daniels <noah_daniels@uri.edu>",
    "Morgan Prior <morgan_prior@uri.edu>",
    "Isaac Chen <ijchen@uri.edu>",
    "Oliver McLaughlin <olwmcjp@gmail.com>",
]
edition = "2021"
rust-version = "1.72"
description = "Clustering, Learning and Approximation with Manifolds"
license = "MIT"
readme = "./README.md"
documentation = "https://docs.rs/abd-clam/latest/abd_clam/"
repository = "https://github.com/URI-ABD/clam"
homepage = "https://github.com/URI-ABD/clam"

# Publishing lock.
# When you're ready to start publishing, set publish to true
# and update the release github action.
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
distances = { version = "1.6.2", path = "../distances" }
rayon = "1.8.0"
serde = { version = "1.0.188", features = ["derive"] }
mt_logger = "3.0.2"
statistical = "1.0.0"

# TODO: Experiment with other serialization formats for performance.
bincode = "1.3.3"

# Only used for Dataset::choose_unique
# TODO: Use a smaller crate so we can have a smaller binary
rand = "0.8.5"

# Only used in CAKES
# TODO: Break CAKES out into an optional feature
priority-queue = "1.3.2"

# Only used in CHAODA
# TODO: Break CHAODA out into an optional feature
# automl = { version = "0.3.0", path = "../rust-automl" }
# automl = { git = "https://github.com/nishaq503/rust-automl", branch = "updates/dependencies" }
# TODO: Switch from automl to smartcore
automl = "0.2.7"
# Only used for normalizing cluster ratios for CHAODA
libm = "0.2.7"

# Only used for sharded datasets
# TODO: Break sharded datasets out into an optional feature
# memmap2 = "0.8.0"
smartcore = "0.2.1"


[dev-dependencies]
symagen = { path = "../SyMaGen" }
criterion = { version = "0.5.1", features = ["html_reports"] }
tempdir = "0.3.7"
float-cmp = "0.9.0"
test-case = "3.2.1"
postcard = { version = "1.0.8", features = ["alloc"] }
statistical = "1.0.0"

[[bench]]
name = "genomic"
harness = false

[[bench]]
name = "knn-search"
harness = false

[[bench]]
name = "knn-vs-rnn"
harness = false

[[bench]]
name = "rnn-search"
harness = false
