[package]
name = "cakes-results"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abd-clam = { path = "../abd-clam" }
distances = { path = "../distances" }
ndarray = { version = "0.15.6", features = ["rayon"] }
ndarray-npy = "0.8.1"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.105"
rayon = "1.7.0"
num-traits = "0.2.16"
sysinfo = "0.29.9"
