[tool.poetry]
name = "cakes-results"
version = "0.1.0"
description = "Regenerating plots for the CAKES paper."
authors = ["Najib Ishaq <najib_ishaq@zoho.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cakes_results", from = "python"}]

[tool.poetry.group.dev.dependencies]
pip = "^23.2.1"
setuptools = "^68.1.2"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
