[package]
name = "guessing-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "guessing_game"
crate-type = ["cdylib"]


[dependencies]
rand = "0.8.4"

[dependencies.pyo3]
version = "0.18.0"
features = ["abi3-py37"]