[package]
name = "bench-cakes"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
bench-utils = { path = "../utils" }
clap = { workspace = true }
ftlog = { workspace = true }
bitcode = { workspace = true }
abd-clam = { workspace = true, features = ["disk-io"] }
distances = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
stringzilla = "3.9.5"
