[package]
name = "bench-pancakes"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
bench-cakes = { path = "../cakes" }
bench-utils = { path = "../utils" }
clap = { workspace = true }
ftlog = { workspace = true }
abd-clam = { workspace = true }
distances = { workspace = true }
bitcode = { workspace = true }
stringzilla = { workspace = true }
