[package]
name = "bench-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
hdf5 = { workspace = true }
ndarray = { workspace = true }
ftlog = { workspace = true }
symagen = { workspace = true }
distances = { workspace = true }
abd-clam = { workspace = true, features = ["all"] }
bitcode = { workspace = true }
csv = { workspace = true }
stringzilla = { workspace = true }
bio = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
