[package]
name = "abd-clam"
version = "0.31.0"
authors = [
    "Najib Ishaq <najib_ishaq@zoho.com>",
    "Tom Howard <info@tomhoward.codes>",
    "Noah Daniels <noah_daniels@uri.edu>",
    "Morgan Prior <morgan_prior@uri.edu>",
    "Isaac Chen <ijchen@uri.edu>",
    "Oliver McLaughlin <olwmcjp@gmail.com>",
]
edition = "2021"
rust-version = "1.79"
description = "Clustering, Learning and Approximation with Manifolds"
license = "MIT"
readme = "./README.md"
documentation = "https://docs.rs/abd-clam/latest/abd_clam/"
repository = "https://github.com/URI-ABD/clam"
homepage = "https://github.com/URI-ABD/clam"

# Publishing lock.
# When you're ready to start publishing, set publish to true
# and update the release github action.
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
distances = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
flate2 = { workspace = true }
ftlog = { workspace = true }

# For:
#  - IO of datasets
csv = { version = "1.3.0" , optional = true }

# For:
#  - IO from npy files
#  - arrays in CHAODA
ndarray = { workspace = true, optional = true }
ndarray-npy = { workspace = true, optional = true }

# For:
#  - CHAODA
# smartcore = { git = "https://github.com/smartcorelib/smartcore.git", rev = "239c00428f7448d30b78bf8653923f6bc0e2c29b", features = ["serde"], optional = true }
smartcore = { git = "https://github.com/nishaq503/smartcore.git", rev = "e5767d63d05ea5ea6a202482f9bce96034ddc920", features = ["serde"], optional = true }
# linfa = { version = "0.7.0", features = ["serde"], optional = true }
# linfa-linear = { version = "0.7.0", features = ["serde"], optional = true }
ordered-float = { version = "4.2.2", optional = true }
bincode = { workspace = true, optional = true }

[dev-dependencies]
symagen = { workspace = true }
bincode = { workspace = true }
criterion = { version = "0.5.1", features = ["html_reports"] }
tempdir = "0.3.7"
float-cmp = "0.9.0"
test-case = "3.2.1"
statistical = "1.0.0"

[features]
csv = ["dep:csv"]  # For writing trees to CSV files.
ndarray-bindings = ["dep:ndarray", "dep:ndarray-npy"]
chaoda = ["dep:smartcore", "dep:ordered-float", "dep:bincode"]

[[bench]]
name = "genomic_search"
harness = false

[[bench]]
name = "vector_search"
harness = false

[[bench]]
name = "ann_benchmarks"
harness = false
required-features = ["ndarray-bindings"]
