[package]
name = "cakes-results"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abd-clam = { path = "../abd-clam" }
distances = { path = "../distances" }
symagen = { path = "../SyMaGen" }

ndarray = { version = "0.15.6", features = ["rayon"] }
ndarray-npy = "0.8.1"

serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.105"

clap = { version = "4.4.4", features = ["derive"] }
log = "0.4.19"
env_logger = "0.10.0"
num-format = "0.4.4"
csv = "1.2.2"

[[bin]]
name = "knn-results"
path = "src/knn_reports.rs"

[[bin]]
name = "scaling-results"
path = "src/scaling_reports.rs"
