[tool.poetry]
name = "abd-clam"
version = "0.23.0"
description = "Clustering, Learning and Approximation with Manifolds"
authors = [
    "Najib Ishaq <najib_ishaq@zoho.com>",
    "Tom Howard <info@tomhoward.codes>",
    "Noah Daniels <noah_daniels@uri.edu>",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "~1.25.2"
scipy = "~1.11.3"
scikit-learn = "~1.3.1"

[tool.poetry.group.dev.dependencies]
maturin = "~1.3.0"
pre-commit = "~3.5.0"
bump2version = "~1.0.1"

[build-system]
requires = ["maturin>=1.3.0,<1.4.0"]
build-backend = "maturin"

[project]
name = "abd-clam"
version = "0.23.0"
description = "Clustering, Learning and Approximation with Manifolds"
authors = [
    {name = "Najib Ishaq", email = "najib_ishaq@zoho.com"},
    {name = "Tom Howard", email = "info@tomhoward.codes"},
    {name = "Noah Daniels", email = "noah_daniels@uri.edu"},
]
requires-python = ">=3.9,<3.12"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
homepage = "https://github.com/uri-abd/py-clam"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
