[package]
name = "abd-distances"
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "abd_distances"
crate-type = ["cdylib"]

[dependencies]
distances = { version = "1.6.3", path = "../../crates/distances" }
ndarray = { version = "0.15.6", features = ["rayon"] }
numpy = "0.20.0"
pyo3 = { version = "0.20.2", features = ["extension-module", "abi3-py39"] }
