[package]
name = "abd-distances"
version = "1.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "abd_distances"
crate-type = ["cdylib"]

[dependencies]
distances = { workspace = true }
ndarray = { workspace = true }
numpy = { workspace = true }
pyo3 = { workspace = true }
